--- a/main.ipynb
+++ b/main.ipynb
@@ -18,13 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "from sklearn.preprocessing import LabelEncoder\n",
+    "import torch.nn.functional as F\n",
+    "import torch.nn as nn\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import torch"
    ]
   },
   {
@@ -37,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +139,7 @@
        "5        1       355      -1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +274,7 @@
        "5    93351  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +358,7 @@
        "5     32935  Haikyuu!!: Karasuno Koukou VS Shiratorizawa Ga..."
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +457,7 @@
        "5       21        20       8  Naruto"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +512,7 @@
        "841        20  Naruto"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +563,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +574,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anime_ratings.loc[anime_ratings['rating'] == -1, 'rating'] = 0"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Entrenamiento del modelo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MF(nn.Module):\n",
+    "    def __init__(self, num_users, num_items, emb_size=100):\n",
+    "        super(MF, self).__init__()\n",
+    "        self.user_emb = nn.Embedding(num_users, emb_size)\n",
+    "        self.item_emb = nn.Embedding(num_items, emb_size)\n",
+    "        self.user_emb.weight.data.uniform_(0, 0.05)\n",
+    "        self.item_emb.weight.data.uniform_(0, 0.05)\n",
+    "        \n",
+    "    def forward(self, u, v):\n",
+    "        u = self.user_emb(u)\n",
+    "        v = self.item_emb(v)\n",
+    "        return (u*v).sum(1)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_epocs(model, epochs=10, lr=0.01, wd=0.0, unsqueeze=False):\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr=lr, weight_decay=wd)\n",
+    "    model.train()\n",
+    "\n",
+    "    for i in range(epochs):\n",
+    "        users = torch.LongTensor(df_train.user_id.values)#.cuda()\n",
+    "        items = torch.LongTensor(df_train.anime_id.values)#.cuda()\n",
+    "        ratings = torch.FloatTensor(df_train.rating.values)#.cuda()\n",
+    "\n",
+    "        if unsqueeze:\n",
+    "            ratings = ratings.unsqueeze(1)\n",
+    "\n",
+    "        y_hat = model(users, items)\n",
+    "        loss = F.mse_loss(y_hat, ratings)\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        print(loss.item()) \n",
+    "\n",
+    "    test_loss(model, unsqueeze)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_loss(model, unsqueeze=False):\n",
+    "    model.eval()\n",
+    "\n",
+    "    users = torch.LongTensor(df_val.user_id.values)#.cuda()\n",
+    "    items = torch.LongTensor(df_val.anime_id.values)#.cuda()\n",
+    "    ratings = torch.FloatTensor(df_val.rating.values)#.cuda()\n",
+    "\n",
+    "    if unsqueeze:\n",
+    "        ratings = ratings.unsqueeze(1)\n",
+    "\n",
+    "    y_hat = model(users, items)\n",
+    "    loss = F.mse_loss(y_hat, ratings)\n",
+    "    \n",
+    "    print(\"test loss %.3f \" % loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,156 +684,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = anime_ratings.iloc[:, :-2]\n",
+    "y = anime_ratings.iloc[:, -2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, random_state=2, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = x_train.join(y_train)\n",
+    "df_val = x_test.join(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_users = len(anime_ratings.user_id.unique())\n",
+    "num_items = len(anime_ratings.anime_id.unique())\n",
+    "emb_size = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = MF(num_users, num_items, emb_size=emb_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>anime_id</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>Naruto</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Naruto</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Naruto</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>Naruto</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>Naruto</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7813722</th>\n",
-       "      <td>73513</td>\n",
-       "      <td>10272</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Dr. Slump: Hoyoyo! Arale no Himitsu Dai Koukai...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7813723</th>\n",
-       "      <td>73513</td>\n",
-       "      <td>11081</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Shiroi Zou</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7813724</th>\n",
-       "      <td>73513</td>\n",
-       "      <td>9908</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>Kakinoki Mokkii</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7813725</th>\n",
-       "      <td>73514</td>\n",
-       "      <td>11193</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>Hashiri Hajimeta bakari no Kimi ni</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7813726</th>\n",
-       "      <td>73514</td>\n",
-       "      <td>10331</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Gamba: Gamba to Nakama-tachi</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7813727 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         user_id  anime_id  rating   \n",
-       "0              0        10      -1  \\\n",
-       "1              0        10       8   \n",
-       "2              0        10       6   \n",
-       "3              0        10      -1   \n",
-       "4              0        10      -1   \n",
-       "...          ...       ...     ...   \n",
-       "7813722    73513     10272       8   \n",
-       "7813723    73513     11081      10   \n",
-       "7813724    73513      9908      -1   \n",
-       "7813725    73514     11193      -1   \n",
-       "7813726    73514     10331       4   \n",
-       "\n",
-       "                                                      name  \n",
-       "0                                                   Naruto  \n",
-       "1                                                   Naruto  \n",
-       "2                                                   Naruto  \n",
-       "3                                                   Naruto  \n",
-       "4                                                   Naruto  \n",
-       "...                                                    ...  \n",
-       "7813722  Dr. Slump: Hoyoyo! Arale no Himitsu Dai Koukai...  \n",
-       "7813723                                         Shiroi Zou  \n",
-       "7813724                                    Kakinoki Mokkii  \n",
-       "7813725                 Hashiri Hajimeta bakari no Kimi ni  \n",
-       "7813726                       Gamba: Gamba to Nakama-tachi  \n",
-       "\n",
-       "[7813727 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.748115539550781\n",
+      "23.536962509155273\n",
+      "11.240580558776855\n",
+      "13.056246757507324\n",
+      "16.73649787902832\n",
+      "16.46828842163086\n",
+      "13.61886215209961\n"
+     ]
     }
    ],
    "source": [
-    "anime_ratings"
+    "train_epocs(model, epochs=20, lr=0.1)"
    ]
   }
  ],
