--- a/main.ipynb
+++ b/main.ipynb
@@ -582,6 +582,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anime_ratings = anime_ratings.sample(10000)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -591,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +620,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_loss(model, unsqueeze=False):\n",
+    "    model.eval()\n",
+    "\n",
+    "    users = torch.LongTensor(df_val.user_id.values)\n",
+    "    items = torch.LongTensor(df_val.anime_id.values)\n",
+    "    ratings = torch.FloatTensor(df_val.rating.values)\n",
+    "\n",
+    "    if unsqueeze:\n",
+    "        ratings = ratings.unsqueeze(1)\n",
+    "\n",
+    "    y_hat = model(users, items)\n",
+    "    loss = F.mse_loss(y_hat, ratings)\n",
+    "    \n",
+    "    print(\"test loss %.3f \" % loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,9 +651,9 @@
     "    model.train()\n",
     "\n",
     "    for i in range(epochs):\n",
-    "        users = torch.LongTensor(df_train.user_id.values)#.cuda()\n",
-    "        items = torch.LongTensor(df_train.anime_id.values)#.cuda()\n",
-    "        ratings = torch.FloatTensor(df_train.rating.values)#.cuda()\n",
+    "        users = torch.LongTensor(df_train.user_id.values)\n",
+    "        items = torch.LongTensor(df_train.anime_id.values)\n",
+    "        ratings = torch.FloatTensor(df_train.rating.values)\n",
     "\n",
     "        if unsqueeze:\n",
     "            ratings = ratings.unsqueeze(1)\n",
@@ -640,29 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test_loss(model, unsqueeze=False):\n",
-    "    model.eval()\n",
-    "\n",
-    "    users = torch.LongTensor(df_val.user_id.values)#.cuda()\n",
-    "    items = torch.LongTensor(df_val.anime_id.values)#.cuda()\n",
-    "    ratings = torch.FloatTensor(df_val.rating.values)#.cuda()\n",
-    "\n",
-    "    if unsqueeze:\n",
-    "        ratings = ratings.unsqueeze(1)\n",
-    "\n",
-    "    y_hat = model(users, items)\n",
-    "    loss = F.mse_loss(y_hat, ratings)\n",
-    "    \n",
-    "    print(\"test loss %.3f \" % loss.item())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,18 +722,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "num_users = len(anime_ratings.user_id.unique())\n",
     "num_items = len(anime_ratings.anime_id.unique())\n",
-    "emb_size = 100"
+    "emb_size = 10000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,18 +749,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13.748115539550781\n",
-      "23.536962509155273\n",
-      "11.240580558776855\n",
-      "13.056246757507324\n",
-      "16.73649787902832\n",
-      "16.46828842163086\n",
-      "13.61886215209961\n"
+      "11.388671875\n",
+      "9312218.0\n",
+      "2630335.0\n",
+      "827604.5625\n",
+      "3196565.25\n",
+      "5653263.0\n",
+      "1976290.25\n",
+      "543000.3125\n",
+      "881518.0\n",
+      "847236.9375\n",
+      "test loss 142278.875 \n"
      ]
     }
    ],
    "source": [
-    "train_epocs(model, epochs=20, lr=0.1)"
+    "train_epocs(model, epochs=10, lr=0.6)"
    ]
   }
  ],
